<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="10dp" >

    <LinearLayout
        android:id="@+id/rel1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kq_check_class_lab1"
            android:textColor="@color/color_blue"
            android:textSize="18sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@color/color_blue" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/rel2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rel1"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="100dp"
                android:layout_height="fill_parent"
                android:drawableLeft="@drawable/kq_check_class_icon_course"
                android:gravity="center_vertical"
                android:text="@string/kq_check_course"
                android:textColor="@color/color_black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/kq_check_class_course"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center_vertical"
                android:textColor="@color/color_black"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="100dp"
                android:layout_height="fill_parent"
                android:drawableLeft="@drawable/kq_check_class_icon_class"
                android:gravity="center_vertical"
                android:text="@string/kq_check_class"
                android:textColor="@color/color_black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/kq_check_class_class"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center_vertical"
                android:textColor="@color/color_black"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="100dp"
                android:layout_height="fill_parent"
                android:drawableLeft="@drawable/kq_check_class_icon_qinjia"
                android:gravity="center_vertical"
                android:text="@string/kq_check_qingjia"
                android:textColor="@color/color_black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/kq_check_class_qinjia"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center_vertical"
                android:textColor="@color/color_black"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="100dp"
                android:layout_height="fill_parent"
                android:drawableLeft="@drawable/kq_check_class_icon_queqing"
                android:gravity="center_vertical"
                android:text="@string/kq_check_queqing"
                android:textColor="@color/color_black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/kq_check_class_queqing"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center_vertical"
                android:textColor="@color/color_black"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="100dp"
                android:layout_height="fill_parent"
                android:drawableLeft="@drawable/kq_check_class_icon_late"
                android:gravity="center_vertical"
                android:text="@string/kq_check_chidao"
                android:textColor="@color/color_black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/kq_check_class_chidao"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center_vertical"
                android:textColor="@color/color_black"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/rel3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rel2"
        android:layout_marginTop="20dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kq_check_class_lab2"
            android:textColor="@color/color_blue"
            android:textSize="18sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@color/color_blue" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/rel3"
        android:layout_marginTop="5dp" >

        <ListView
            android:id="@+id/kq_check_class_lsv"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >
        </ListView>
    </LinearLayout>

</RelativeLayout>