<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:id="@+id/rel1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingLeft="10dp" >

        <TextView
            android:id="@+id/lable1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kq_check_person_lable1"
            android:textColor="@color/color_blue" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/lable1"
            android:layout_marginTop="5dp"
            android:background="@color/color_blue" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rel2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rel1"
        android:layout_marginTop="10dp" >

        <RelativeLayout
            android:id="@+id/rel2_1"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:paddingLeft="10dp" >

            <ImageView
                android:id="@+id/kq_check_person_pic"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/stu_pic_default" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/rel2_2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignBottom="@+id/rel2_1"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/rel2_1"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/kq_stu_name"
                    android:textColor="@color/color_black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/kq_check_person_stuname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color_black"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/kq_stu_class"
                    android:textColor="@color/color_black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/kq_check_person_stuclass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color_black"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/kq_stu_sno"
                    android:textColor="@color/color_black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/kq_check_person_stusno"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color_black"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rel3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rel2"
        android:layout_marginTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <TextView
            android:id="@+id/kq_check_person_order_lable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kq_check_persion_record_lable"
            android:textColor="@color/color_blue"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/kq_check_latetimes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textColor="@color/color_blue"
            android:textSize="18sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/kq_check_person_order_lable"
            android:layout_marginTop="5dp"
            android:background="@color/color_blue" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/rel3"
        android:layout_marginTop="5dp"
        android:paddingLeft="20dp" >

        <ListView
            android:id="@+id/kq_check_person_lsv"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scrollbars="none" >
        </ListView>
    </RelativeLayout>

</RelativeLayout>